--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.3.1
+anyio==4.8.0
 asttokens==3.0.0
 attrs==24.3.0
 backcall==0.2.0
@@ -16,6 +17,7 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+colorlog==6.9.0
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
@@ -30,6 +32,9 @@ google-api-core==2.24.0
 google-auth==2.36.0
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 influxdb-client==1.48.0
 ipython==8.12.3
@@ -69,6 +74,7 @@ Pygments==2.18.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-telegram-bot==21.10
 pytz==2024.2
 pyzmq==26.2.0
 reactivex==4.0.4
@@ -78,6 +84,7 @@ rpds-py==0.22.3
 rsa==4.9
 setuptools==75.6.0
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 tenacity==9.0.0
@@ -92,4 +99,3 @@ wcwidth==0.2.13
 webencodings==0.5.1
 Werkzeug==3.1.3
 yarg==0.1.9
-python-telegram-bot==21.10
