--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       DOCKER_INFLUXDB_INIT_PASSWORD: "admin1234"
       DOCKER_INFLUXDB_INIT_ORG: "Argus"
       DOCKER_INFLUXDB_INIT_BUCKET: "uplink_metrics_log"
+      DOCKER_INFLUXDB_INIT_RETENTION: "7d"
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "OPERATOR_TOKEN_1475963987412365987456321042"
       DEV_BUCKET: "dev_metrics"
       GW_BUCKET: "gw_metrics"
