--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ google-api-core==2.24.0
 google-auth==2.36.0
 googleapis-common-protos==1.66.0
 grpcio==1.68.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
